[tool.poetry]
name = "hiring-chatbot"
version = "0.1.0"
description = "An AI based hiring chatbot for querying developers"
authors = ["arnav-deep <arnavd4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.7"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pymysql = "^1.1.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
